# unix_os_rs

./: .gitignore  .gitmessage  README.md  rust-toolchain.toml
docs/: gdb_cheatsheet.md  riscv_registers.md  rust_sbi.md
os/: Cargo.toml  Makefile  build.rs
os/.cargo/: config.toml
os/src/: batch.rs  config.rs  console.rs  entry.asm  error.rs  lang_items.rs  link_app.S  linker.ld  loader.rs  main.rs  sbi.rs  stack_trace.rs  timer.rs
os/src/mm/: address.rs  frame_allocator.rs  heap_allocator.rs  memory_area.rs  memory_set.rs  mod.rs  page_table.rs
os/src/sync/: up.rs
os/src/syscall/: fs.rs  mod.rs  process.rs  timer.rs
os/src/task/: context.rs  mod.rs  switch.S  switch.rs  task.rs
os/src/trap/: context.rs  mod.rs  trap.S
os/src/utils/: range.rs
user/: Cargo.toml  Makefile
user/.cargo/: config
user/src/: console.rs  lang_items.rs  lib.rs  linker.ld  syscall.rs
