[package]
name = "os"
version = "0.1.0"
authors = ["Hongji Li <hongji.l@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
linked_list_allocator = "0.10.4"
bitflags = "1.3.2"
xmas-elf = "0.8.0"
thiserror-no-std = "2.0.2"
anyhow = { version = "1.0", default-features = false }
